@@ -90,6 +90,7 @@ Version 2.1.0
    - Ported maildir protocol fixes from 2.0.2 to 2.1.0
    - Ported substituting of "%d" from 2.0.2 to 2.1.0
    - Bugfix: Selecting "File or Folder" or "Autodetect" in properties dialog
+   - Bugfix: Segfaults when all mails are read while popup is present
 
 Version 2.0.3
   * Roland Stigge:
